plugins {
    id 'java'
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'jacoco'
}

group = 'com.roadify'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'          // REST controller
    implementation 'org.springframework.boot:spring-boot-starter-webflux'      // WebClient
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Security - resource server (JWT from Keycloak)
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    // Redis cache
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'



    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // Resilience4j (retry / circuit breaker)
    implementation 'io.github.resilience4j:resilience4j-spring-boot3'


    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'

}
jacoco {
    toolVersion = "0.8.10"
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test

    reports {
        xml.required = false
        csv.required = false
        html.required = true
        html.outputLocation = layout.buildDirectory.dir("reports/jacoco")
    }
}
